--- a/src/pages/Friends/FriendsWidget.css
+++ b/src/pages/Friends/FriendsWidget.css
@@ -1,5 +1,10 @@
 .firends-list-widget{
     width: 400px;
     /* border: 2px solid #ddd; */
-    height: 500px;
+    min-height:fit-content;
+    height: min-content;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    /* box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(8, 138, 189, 0.5) 0px 0px 0px 1px; */
+    box-shadow: 0 40px 100px rgba(202, 70, 98, 0.62);
 }
