--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,11 +2,16 @@
    background-color: #ddd; 
    margin: 0;
    width: 100%;
-
+   box-shadow: 1px 15px 25px -5px rgba(0,0,0,0.3);
+   border-top-right-radius: 15px ;
+   border-top-left-radius: 15px ;
+    
 }
 
 .header-title{
     color: #555;
-    padding: 10px 20px;
+    padding: 20px 20px;
     margin: 0;
+    font-size: 18px;
+    text-transform: uppercase;
 }
