--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -1,12 +1,33 @@
+@import url('https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap');
 body{
-    margin: 0;
-}
 
+    margin: 0;
+    font-family:  "DM Sans", Helvetica, sans-serif !important;
+    font-size: 1rem;
+    
+    
+}
+h3{
+    font-size: 1rem;
+}
+nav{
+    background-color: #ddd;
+}
 .main{
+    
     height: 100vh;
     display: flex;
     /* align-items: center;  */
     justify-content: center;
-    background-color: #f8f8f8;
+    /* background-color: #f8f8f8; */
     padding-top: 20px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  overflow: auto;
+  background: #02AAB0;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #00CDAC, #02AAB0);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #00CDAC, #02AAB0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+
 }
